# goods-store-tma

./: .env.example  .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 4615a28fee1c_add_order_models.py  a6bc374620f9_initial_migration.py  b32734e76e24_change_user_id_to_bigint.py
backend/src/: bot_main.py  main.py
backend/src/api/: dependencies.py
backend/src/api/v1/endpoints/: orders_api.py  products_api.py
backend/src/bot/handlers/: accept_order.py  catalog.py  info.py  my_orders.py
backend/src/bot/keyboards/: keyboadrs.py
backend/src/bot/middlewares/: db.py
backend/src/bot/services/: api_client.py
backend/src/bot/utils/: texts.py
backend/src/core/: celery_app.py  config.py
backend/src/db/: base.py  base_class.py  session.py
backend/src/models/: order.py  product.py
backend/src/repositories/: base_repository.py  order_repository.py  product_repository.py
backend/src/schemas/: order_schema.py  product_schema.py
backend/src/services/: file_service.py  notification_service.py
backend/src/tasks/: order_tasks.py
frontend/: Dockerfile  vite.config.js
frontend/src/: App.css  App.jsx
nginx/: nginx.conf
